Added support for creating, listing and editing views in MySQL 5.
Added Module Config option to limit the displayed size of large text field data.
---- Changes since 1.290 ----
Added options to the MySQL Server Configuration page for setting the address to listen on, and the maximum number of connections.
Created a page showing database connections, with checkboxes and a button for killing them.
Create a page listing MySQL server variables, with the ability to edit system variables.
Column headings in the Table Data page can be clicked to sort the data by that column.
---- Changes since 1.300 ----
Added options on the backup form for selecting a compatability format for exporting to other database types.
Added an option to compress backups with gzip or bzip2.
When executing an SQL file (such as a backup), it will be automatically un-compressed if needed.
Re-factored backup code into a separate function, which can be called from other modules.
Added an option to the database creation form for selecting the character set, when using MySQL 4.1 or newer.
Added access control options to prevent the viewing and management of views and indexes.
---- Changes since 1.320 ----
When there are too many databases or tables to display, a menu for editing a specific one is displayed in addition to the search field.
---- Changes since 1.330 ----
Fixed a bug that prevents compression from being done when backing up all databases.
---- Changes since 1.340 ----
Improved detection of support for views, which avoids errors with information_schema.views.
---- Changes since 1.370 ----
Added an option on the backup form to create the destination directory if missing.
Re-wrote the backup form to use the new Webmin UI library.
The MySQL password is no longer passed on the command line.
---- Changes since 1.380 ----
Fixed a bug that prevented 'Jump to row' from working properly.
---- Changes since 1.390 ----
The character set to use for MySQL output can now be set on the Module Config page.